crates/store/re_importer/src/importer_mcap/tests/foxglove/snapshots/re_importer__importer_mcap__tests__foxglove__test_location_fixes__foxglove_location_fix.snap
---
source: crates/store/re_importer/src/importer_mcap/tests/foxglove/test_location_fixes.rs
expression: "format!(\"{:-240}\", chunk)"
---
┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                                                                           │
│ * entity_path: /gps_fix                                                                                                                                                                                                             │
│ * id: [**REDACTED**]                                                                                                                                                                                                                │
│ * version: [**REDACTED**]                                                                                                                                                                                                           │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌────────────────────────────────┬───────────────────────────────┬────────────────────────────────┬───────────────────────────────┬────────────────────────────────┬─────────────────────────────┬────────────────────────────────┐ │
│ │ RowId                          ┆ message_log_time              ┆ message_publish_time           ┆ timestamp                     ┆ CoordinateFrame:frame          ┆ GeoPoints:colors            ┆ GeoPoints:positions            │ │
│ │ ---                            ┆ ---                           ┆ ---                            ┆ ---                           ┆ ---                            ┆ ---                         ┆ ---                            │ │
│ │ type: non-null                 ┆ type: Timestamp(ns)           ┆ type: Timestamp(ns)            ┆ type: Timestamp(ns)           ┆ type: List(Utf8)               ┆ type: List(UInt32)          ┆ type: List(FixedSizeList(2 x   │ │
│ │ FixedSizeBinary(16)            ┆ index_name: message_log_time  ┆ index_name:                    ┆ index_name: timestamp         ┆ archetype: CoordinateFrame     ┆ archetype: GeoPoints        ┆ non-null Float64))             │ │
│ │ ARROW:extension:metadata:      ┆ is_sorted: true               ┆ message_publish_time           ┆ is_sorted: true               ┆ component:                     ┆ component: GeoPoints:colors ┆ archetype: GeoPoints           │ │
│ │ {"namespace":"row"}            ┆ kind: index                   ┆ is_sorted: true                ┆ kind: index                   ┆ CoordinateFrame:frame          ┆ component_type: Color       ┆ component: GeoPoints:positions │ │
│ │ ARROW:extension:name: TUID     ┆                               ┆ kind: index                    ┆                               ┆ component_type:                ┆ kind: data                  ┆ component_type: LatLon         │ │
│ │ is_sorted: true                ┆                               ┆                                ┆                               ┆ TransformFrameId               ┆                             ┆ kind: data                     │ │
│ │ kind: control                  ┆                               ┆                                ┆                               ┆ kind: data                     ┆                             ┆                                │ │
│ ╞════════════════════════════════╪═══════════════════════════════╪════════════════════════════════╪═══════════════════════════════╪════════════════════════════════╪═════════════════════════════╪════════════════════════════════╡ │
│ │ row_[**REDACTED**]             ┆ 2026-02-16T14:15:00.174330112 ┆ 2026-02-16T14:15:00.174330112  ┆ 2026-02-16T14:15:00.174330112 ┆ [gps]                          ┆ [4278190335]                ┆ [[59.3192, 18.0738]]           │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]             ┆ 2026-02-16T14:15:01.174330112 ┆ 2026-02-16T14:15:01.174330112  ┆ 2026-02-16T14:15:01.174330112 ┆ [gps]                          ┆ [16711935]                  ┆ [[59.3191, 18.0746]]           │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]             ┆ 2026-02-16T14:15:02.174330112 ┆ 2026-02-16T14:15:02.174330112  ┆ 2026-02-16T14:15:02.174330112 ┆ [gps]                          ┆ [65535]                     ┆ [[59.3191, 18.0754]]           │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]             ┆ 2026-02-16T14:15:03.174330112 ┆ 2026-02-16T14:15:03.174330112  ┆ 2026-02-16T14:15:03.174330112 ┆ [gps]                          ┆ [4294967295]                ┆ [[59.319, 18.0762]]            │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]             ┆ 2026-02-16T14:15:04.174330112 ┆ 2026-02-16T14:15:04.174330112  ┆ 2026-02-16T14:15:04.174330112 ┆ [gps]                          ┆ [255]                       ┆ [[59.3189, 18.077]]            │ │
│ └────────────────────────────────┴───────────────────────────────┴────────────────────────────────┴───────────────────────────────┴────────────────────────────────┴─────────────────────────────┴────────────────────────────────┘ │
└─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
